--- a/roles/confluent.variables_handlers/defaults/main.yml
+++ b/roles/confluent.variables_handlers/defaults/main.yml
@@ -51,7 +51,7 @@ rbac_enabled: false
 
 confluent_server_enabled: true
 
-health_checks_enabled: true
+health_checks_enabled: false
 zookeeper_health_check_command: "exec 42<>/dev/tcp/127.0.0.1/{{zookeeper.properties.clientPort}}; echo -e 'srvr' >&42; cat <&42"
 
 common_role_completed: false
