--- a/roles/confluent.variables_handlers/vars/main.yml
+++ b/roles/confluent.variables_handlers/vars/main.yml
@@ -3,7 +3,7 @@ zookeeper_main_package: "{{ 'confluent-server' if confluent_server_enabled|bool 
 zookeeper_packages:
   - confluent-common
   - confluent-rest-utils
-  - confluent-metadata-service
+#  - confluent-metadata-service
   - "{{ zookeeper_main_package }}"
 zookeeper_default_user: cp-kafka
 zookeeper_default_group: confluent
@@ -17,7 +17,7 @@ kafka_broker_main_package: "{{ 'confluent-server' if confluent_server_enabled|bo
 kafka_broker_packages:
   - confluent-common
   - confluent-rest-utils
-  - confluent-metadata-service
+#  - confluent-metadata-service
   - "{{ kafka_broker_main_package }}"
   - confluent-rebalancer
   - confluent-security
@@ -32,7 +32,7 @@ schema_registry_service_name: confluent-schema-registry
 schema_registry_packages:
   - confluent-common
   - confluent-rest-utils
-  - confluent-metadata-service
+#  - confluent-metadata-service
   - "{{ kafka_broker_main_package }}"
   - confluent-schema-registry
   - confluent-security
@@ -47,7 +47,7 @@ kafka_connect_service_name: confluent-kafka-connect
 kafka_connect_packages:
   - confluent-common
   - confluent-rest-utils
-  - confluent-metadata-service
+#  - confluent-metadata-service
   - "{{ kafka_broker_main_package }}"
   - confluent-kafka-connect-storage-common
   - confluent-kafka-connect-s3
@@ -70,7 +70,7 @@ ksql_service_name: confluent-ksql
 ksql_packages:
   - confluent-common
   - confluent-rest-utils
-  - confluent-metadata-service
+#  - confluent-metadata-service
   - "{{ kafka_broker_main_package }}"
   - confluent-ksql
   - confluent-security
@@ -85,7 +85,7 @@ kafka_rest_service_name: confluent-kafka-rest
 kafka_rest_packages:
   - confluent-common
   - confluent-rest-utils
-  - confluent-metadata-service
+#  - confluent-metadata-service
   - "{{ kafka_broker_main_package }}"
   - confluent-kafka-rest
   - confluent-security
@@ -100,7 +100,7 @@ control_center_service_name: confluent-control-center
 control_center_packages:
   - confluent-common
   - confluent-rest-utils
-  - confluent-metadata-service
+#  - confluent-metadata-service
   - "{{ kafka_broker_main_package }}"
   - confluent-control-center-fe
   - confluent-control-center
